--- a/BlackJack-Game/index.html
+++ b/BlackJack-Game/index.html
@@ -11,6 +11,7 @@
             <p id="sum-el">Sum:</p>
             <button id="start-btn" class="btn">START GAME</button>
             <button id="new-card-btn" class="btn">New Card</button>
+            <p id="player-el">Maxime : $145</p>
         </div>
         <script src="index.js"></script>
     </body>
