--- a/Chrome-Extension/index.html
+++ b/Chrome-Extension/index.html
@@ -6,7 +6,10 @@
     <body>
         <div class="wrapper">
             <input type="text" id="input-el">
-            <button id="input-btn">SAVE INPUT</button>
+            <div class="btn">
+                <button id="input-btn">SAVE INPUT</button>
+                <button id="clear-btn">DELETE ALL</button>
+            </div>
             <ul id="ul-el"></ul>
         </div>
         <script src="index.js"></script>
