--- a/Chrome-Extension/index.html
+++ b/Chrome-Extension/index.html
@@ -11,7 +11,9 @@
                 <button id="tab-btn">SAVE TAB</button>
                 <button id="clear-btn">DELETE ALL</button>
             </div>
-            <ul id="ul-el"></ul>
+            <div class="scroll">
+                <ul id="ul-el"></ul>
+            </div>
         </div>
         <script src="index.js"></script>
     </body>
